Closed
Bug 940271
Opened 12 years ago
Closed 12 years ago
Paired device may be listed more than once
Categories
(Firefox OS Graveyard :: Bluetooth, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
1.3 Sprint 5 - 11/22
People
(Reporter: echou, Assigned: echou)
Details
Attachments
(1 file)
|
1.41 KB,
patch
|
gyeh
:
review+
|
Details | Diff | Splinter Review |
= STR =
1. Use B2G device to pair with another device (Dev A).
2. Make sure they are paired
3. Delete link key from Dev A
4. Start pairing process from Dev A
5. Again, make sure they are paired.
= Expected Result =
Only one 'Dev A' would be shown on the Paired Devices section.
= Actual Result =
Two 'Dev A' would be seen.
| Assignee | ||
Comment 1•12 years ago
|
||
Currently we won't check if the newly paired device has been already paired. The patch is almost ready.
Assignee: nobody → echou
| Assignee | ||
Comment 2•12 years ago
|
||
* Don't fire PropertyChanged if the device address has been already in the array.
Attachment #8334452 -
Flags: review?(gyeh)
Comment 3•12 years ago
|
||
Comment on attachment 8334452 [details] [diff] [review]
patch 1: v1: fix
Review of attachment 8334452 [details] [diff] [review]:
-----------------------------------------------------------------
Looks great to me.
Attachment #8334452 -
Flags: review?(gyeh) → review+
| Assignee | ||
Comment 4•12 years ago
|
||
Comment 5•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → 1.3 Sprint 5 - 11/22
You need to log in
before you can comment on or make changes to this bug.
Description
•