Bug 940271 - Don't fire PropertyChanged if the device address has been already in the array, r=gyeh